frontend/test/should_fail/index_pattern_multiple_edge_fromto_argument3_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	-e:E{multiple(Ei >= 42, Ei <= 44, E2j >= 0.0, E2j <= 1)}->;
	
	modify {
	}
}
